[FMT] apply toml formatting hook on pyproject.toml (#3872)
* apply toml formatting hook on pyproject.toml

* 4 spaces

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -92,6 +92,12 @@ repos:
         args: ["--toml", "pyproject.toml"]
         additional_dependencies: [tomli]
 
+  - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+    rev: v2.10.0
+    hooks:
+    - id: pretty-format-toml
+      args: [--autofix, --indent, '4']
+
   - repo: https://github.com/pyCQA/flake8
     rev: 6.1.0
     hooks:
