--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+---
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 
@@ -50,57 +51,63 @@ exclude: |
     )$
 
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
+-   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-      - id: check-ast
-      - id: check-case-conflict
-      - id: check-json
-      - id: check-merge-conflict
-      - id: check-yaml
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
-      - id: check-toml
+    -   id: check-ast
+    -   id: check-case-conflict
+    -   id: check-json
+    -   id: check-merge-conflict
+    -   id: check-yaml
+    -   id: end-of-file-fixer
+    -   id: trailing-whitespace
+    -   id: check-toml
 
-  - repo: https://github.com/pycqa/isort
+-   repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
-      - id: isort
-        args: ["--profile", "black"]
+    -   id: isort
+        args: [--profile, black]
 
-  - repo: https://github.com/ikamensh/flynt/
-    rev: "1.0.1"
+-   repo: https://github.com/ikamensh/flynt/
+    rev: 1.0.1
     hooks:
     -   id: flynt
 
-  - repo: https://github.com/asottile/pyupgrade
+-   repo: https://github.com/asottile/pyupgrade
     rev: v3.10.1
     hooks:
-      - id: pyupgrade
+    -   id: pyupgrade
         args: [--py36-plus]
 
-  - repo: https://github.com/psf/black
+-   repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
-      - id: black
-        args: ["--config", "pyproject.toml"]
+    -   id: black
+        args: [--config, pyproject.toml]
 
-  - repo: https://github.com/codespell-project/codespell
+-   repo: https://github.com/codespell-project/codespell
     rev: v2.2.5
     hooks:
-      - id: codespell
-        args: ["--toml", "pyproject.toml"]
+    -   id: codespell
+        args: [--toml, pyproject.toml]
         additional_dependencies: [tomli]
 
-  - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+-   repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
+    rev: 0.2.3
+    hooks:
+    -   id: yamlfmt
+        args: [--mapping, '4', --sequence, '4', --offset, '0']
+
+-   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
     rev: v2.10.0
     hooks:
-    - id: pretty-format-toml
-      args: [--autofix, --indent, '4']
+    -   id: pretty-format-toml
+        args: [--autofix, --indent, '4']
 
-  - repo: https://github.com/pyCQA/flake8
+-   repo: https://github.com/pyCQA/flake8
     rev: 6.1.0
     hooks:
-      - id: flake8
-        args: ["--config", ".flake8", "--verbose"]
+    -   id: flake8
+        args: [--config, .flake8, --verbose]
         additional_dependencies: [flake8-docstrings, flake8-use-fstring]
