--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,12 @@
+---
 # Documentation
 # https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
+-   package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: "weekly"
+        interval: weekly
     labels:
-      - "dependencies"
-      - "Infrastructure"
+    -   dependencies
+    -   Infrastructure
