--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -2,31 +2,31 @@
 name: Black
 
 on:
-  push:
-    branches:
-      - "main"
-  pull_request:
-    branches:
-      - "*"
+    push:
+        branches:
+        -   main
+    pull_request:
+        branches:
+        -   '*'
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
 
 jobs:
-  black:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    black:
+        runs-on: ubuntu-latest
+        steps:
+        -   uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+        -   uses: actions/setup-python@v4
+            with:
+                python-version: '3.11'
 
-      - name: "Install black"
-        shell: bash {0}
-        run: |
-          python -m pip install --upgrade pip black
+        -   name: Install black
+            shell: bash {0}
+            run: |
+                python -m pip install --upgrade pip black
 
-      - name: "Run Black"
-        run: black --check .
+        -   name: Run Black
+            run: black --check .
