--- a/.github/workflows/f_strings.yml
+++ b/.github/workflows/f_strings.yml
@@ -2,30 +2,30 @@
 name: f strings
 
 on:
-  push:
-    branches:
-      - "main"
-  pull_request:
-    branches:
-      - "*"
+    push:
+        branches:
+        -   main
+    pull_request:
+        branches:
+        -   '*'
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
 
 jobs:
-  f_strings:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    f_strings:
+        runs-on: ubuntu-latest
+        steps:
+        -   uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+        -   uses: actions/setup-python@v4
+            with:
+                python-version: '3.11'
 
-      - name: "Install flynt"
-        shell: bash {0}
-        run: python -m pip install --upgrade pip flynt
+        -   name: Install flynt
+            shell: bash {0}
+            run: python -m pip install --upgrade pip flynt
 
-      - name: "Run flynt"
-        run: flynt .
+        -   name: Run flynt
+            run: flynt .
