--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,38 +1,39 @@
-name: "flake8"
+---
+name: flake8
 
 on:
-  push:
-    branches:
-      - "main"
-  pull_request:
-    branches:
-      - "*"
+    push:
+        branches:
+        -   main
+    pull_request:
+        branches:
+        -   '*'
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
 
 jobs:
-  flake8:
-    name: run flake8
-    runs-on: ubuntu-latest
+    flake8:
+        name: run flake8
+        runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash
+        defaults:
+            run:
+                shell: bash
 
-    steps:
-      - uses: actions/checkout@v3
+        steps:
+        -   uses: actions/checkout@v3
 
-      - name: "Setup python"
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+        -   name: Setup python
+            uses: actions/setup-python@v4
+            with:
+                python-version: '3.10'
 
-      - name: "Install Flake8"
-        shell: bash {0}
-        run: python -m pip install --upgrade pip flake8 flake8-docstrings flake8-use-fstring
+        -   name: Install Flake8
+            shell: bash {0}
+            run: python -m pip install --upgrade pip flake8 flake8-docstrings flake8-use-fstring
 
-      - name: "Run Flake8 on whole file"
-        shell: bash {0}
-        run: flake8 --verbose .
+        -   name: Run Flake8 on whole file
+            shell: bash {0}
+            run: flake8 --verbose .
