--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -2,30 +2,30 @@
 name: isort
 
 on:
-  push:
-    branches:
-      - "main"
-  pull_request:
-    branches:
-      - "*"
+    push:
+        branches:
+        -   main
+    pull_request:
+        branches:
+        -   '*'
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
 
 jobs:
-  isort:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    isort:
+        runs-on: ubuntu-latest
+        steps:
+        -   uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+        -   uses: actions/setup-python@v4
+            with:
+                python-version: '3.11'
 
-      - name: "Install isort"
-        shell: bash {0}
-        run: python -m pip install --upgrade pip isort
+        -   name: Install isort
+            shell: bash {0}
+            run: python -m pip install --upgrade pip isort
 
-      - name: "Run isort"
-        run: isort --diff --check --settings-path pyproject.toml .
+        -   name: Run isort
+            run: isort --diff --check --settings-path pyproject.toml .
