--- a/.github/workflows/update_precommit_hooks.yml
+++ b/.github/workflows/update_precommit_hooks.yml
@@ -17,36 +17,36 @@ on:
 #            │ │ │ │ │
 #            │ │ │ │ │
 #            * * * * *
-  schedule:
-    - cron: "0 0 * * 1" # every monday
+    schedule:
+    -   cron: 0 0 * * 1 # every monday
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    workflow_dispatch:
 
 jobs:
-  update_precommit_hooks:
+    update_precommit_hooks:
 
     # only run on upstream repo
-    if: github.repository_owner == 'nilearn'
+        if: github.repository_owner == 'nilearn'
 
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-      - name: Install pre-commit
-        run: pip install pre-commit
-      - name: Update pre-commit hooks
-        run: pre-commit autoupdate
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          commit-message: pre-commit hooks auto-update
-          base: main
-          token: ${{ secrets.GITHUB_TOKEN }}
-          delete-branch: true
-          title: '[BOT] update pre-commit hooks'
-          body: 'done via this [GitHub Action](https://github.com/${{ github.repository_owner }}/nilearn/blob/main/.github/workflows/update_precommit_hooks.yml)'
+        runs-on: ubuntu-latest
+        steps:
+        -   name: Checkout repo
+            uses: actions/checkout@v3
+        -   name: Set up Python
+            uses: actions/setup-python@v4
+            with:
+                python-version: '3.11'
+        -   name: Install pre-commit
+            run: pip install pre-commit
+        -   name: Update pre-commit hooks
+            run: pre-commit autoupdate
+        -   name: Create Pull Request
+            uses: peter-evans/create-pull-request@v5
+            with:
+                commit-message: pre-commit hooks auto-update
+                base: main
+                token: ${{ secrets.GITHUB_TOKEN }}
+                delete-branch: true
+                title: '[BOT] update pre-commit hooks'
+                body: done via this [GitHub Action](https://github.com/${{ github.repository_owner }}/nilearn/blob/main/.github/workflows/update_precommit_hooks.yml)
