--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,9 @@ dev = [
     "isort",
     "flynt",
     "black",
-    "flake8-use-fstring"
+    "flake8-use-fstring",
+    'codespell',
+    'tomli'
 ]
 # Requirements necessary for building the documentation
 doc = [
