[MAINT] add missing dev dependencies for linting (#3888)
* add codespell to dev dependencies for linting

* add precommit to dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,10 @@ dev = [
     "isort",
     "flynt",
     "black",
-    "flake8-use-fstring"
+    "flake8-use-fstring",
+    'codespell',
+    'tomli',
+    'pre-commit'
 ]
 # Requirements necessary for building the documentation
 doc = [
